диаграмма для всех классов с мультиметодами

--- a/MultiFunctions/MultiFunctions/MultiFunctions.vcxproj
+++ b/MultiFunctions/MultiFunctions/MultiFunctions.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="Asteroid.cpp" />
     <ClCompile Include="Collide.cpp" />
+    <ClCompile Include="ColorChanging.cpp" />
     <ClCompile Include="ContainerMap.cpp" />
     <ClCompile Include="DrawingExample.cpp" />
     <ClCompile Include="FncDispatcher.cpp" />
